--- a/Mini-Project/exploratory.ipynb
+++ b/Mini-Project/exploratory.ipynb
@@ -511,9 +511,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n",
+      "M5(\n",
+      "  (conv1): Conv1d(1, 32, kernel_size=(80,), stride=(16,))\n",
+      "  (bn1): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (pool1): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (conv2): Conv1d(32, 32, kernel_size=(3,), stride=(1,))\n",
+      "  (bn2): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (pool2): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (conv3): Conv1d(32, 64, kernel_size=(3,), stride=(1,))\n",
+      "  (bn3): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (pool3): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (conv4): Conv1d(64, 64, kernel_size=(3,), stride=(1,))\n",
+      "  (bn4): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (pool4): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (fc1): Linear(in_features=64, out_features=3, bias=True)\n",
+      ")\n",
+      "Number of parameters: 24835\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -565,8 +589,7 @@
     "        x = self.fc1(x)\n",
     "        return F.log_softmax(x, dim=2)\n",
     "\n",
-    "\n",
-    "model = M5(n_input=transformed.shape[0], n_output=len(labels))\n",
+    "model = M5(n_output=len(labels))\n",
     "model.to(device)\n",
     "print(model)\n",
     "\n",
